# Vychislitelnaya_matematika

./: README.md  pyproject.toml  varianty_vychmat_01z.xlsx
labs/: drawer.py
labs/lab_1/: main.py  table_defined_func.csv
labs/lab_2/: main.py
labs/lab_3/: main.py
labs/lab_4/: input.txt  main.py
labs/lab_5/: main.py
labs/lab_6/: main.py
test/: main.py  solution.csv
